up: added dark mode swith and added darkmode styles, fix: styles of container

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   font-style: normal;
   font-weight: 300 600 800;
   font-display: swap;
-  src: url("/fonts/NunitoSans.ttf") format("ttf");
+  src: url("fonts/NunitoSans.ttf") format("truetype");
 }
 
 @theme {
